# genki-anki-deck-generator

./: .gitignore  README.md  pyproject.toml
config/: config.toml
config/decks/genki_1/L00/: 01_greetings.yaml  02_numbers_0-100.yaml
config/decks/genki_1/L01/: 01_vocabulary.yaml  02_additional_vocabulary.yaml  03_year_student.yaml  04_years_old.yaml  05_hours.yaml  06_minutes.yaml  07_grammar.yaml
config/decks/genki_1/L02/: 01_vocabulary.yaml  02_numbers_100-90000.yaml  03_useful_expressions.yaml  04_grammar.yaml
config/decks/genki_1/L03/: 01_vocabulary.yaml  02_grammar.yaml
config/decks/genki_1/L04/: 01_vocabulary.yaml  02_days_week.yaml  03_days_month.yaml  04_months.yaml  05_time_words.yaml  06_grammar.yaml
config/decks/genki_1/L05/: 01_vocabulary.yaml
config/decks/genki_1/L06/: 01_vocabulary.yaml  02_useful_expressions.yaml
config/decks/genki_1/L07/: 01_vocabulary.yaml  02_counting_people.yaml  03_bodyparts.yaml
config/decks/genki_1/L08/: 01_vocabulary.yaml  02_foods.yaml  03_supermarket.yaml
config/decks/genki_1/L09/: 01_vocabulary.yaml  02_colors.yaml
config/decks/genki_1/L10/: 01_vocabulary.yaml  02_train_station.yaml
config/decks/genki_1/L11/: 01_vocabulary.yaml  02_additional_vocabulary.yaml  03_japanese_class.yaml
config/decks/genki_1/L12/: 01_vocabulary.yaml  02_health_and_illness.yaml
config/decks/genki_2/L13/: 01_vocabulary.yaml
config/decks/genki_2/L14/: 01_vocabulary.yaml
config/decks/genki_2/L15/: 01_vocabulary.yaml
config/decks/genki_2/L16/: 01_vocabulary.yaml
config/decks/genki_2/L17/: 01_vocabulary.yaml
config/decks/genki_2/L18/: 01_vocabulary.yaml
config/decks/genki_2/L19/: 01_vocabulary.yaml
config/decks/genki_2/L20/: 01_vocabulary.yaml
config/decks/genki_2/L21/: 01_vocabulary.yaml
genki_anki_deck_generator/: __main__.py  config.py  template.py
genki_anki_deck_generator/commands/: check_duplicates.py  copy_audio_from_duplicates.py  download.py  generate.py  generate_kanji_readings.py  generate_missing_audio.py  match_vocab.py  process_audio.py
genki_anki_deck_generator/utils/: conjugations.py  duplicates.py  jinja.py  kanji_meanings.py  sound.py  voicepeak.py  voicevox.py
scripts/: format.sh  lint.sh
templates/: english_answer.html  english_question.html  japanese_answer.html  japanese_question.html  style.css
templates/shared/: japanese.html  kanji_meaning.html  verb_group.html  verb_type.html
(+2 files in other folders)
