[project]
name = "genki-anki-deck-generator"
version = "0.1.0"
description = "Generate Genki Anki decks from official Genki audio files"
readme = "README.md"
authors = [{ name = "Stephan Lensky", email = "oss@slensky.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "fugashi>=1.5.1",
    "gdown>=5.2.0",
    "genanki>=0.13.1",
    "jaconv>=0.4.0",
    "japanese-verb-conjugator-v2",
    "jinja2>=3.1.6",
    "minify-html>=0.16.4",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pykakasi>=2.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "unidic-lite>=1.0.8",
    "voicevox-client>=0.4.1",
]

[project.scripts]
genki-anki-deck-generator = "genki_anki_deck_generator.__main__:main"

[dependency-groups]
dev = ["mypy>=1.16.0", "ruff>=0.11.13", "types-pyyaml", "types-requests"]

[tool.uv]
package = true

[tool.uv.sources]
japanese-verb-conjugator-v2 = { git = "https://github.com/stephanlensky/JapaneseVerbConjugator.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["gdown", "pydub.*", "genanki.*", "japanese_verb_conjugator_v2.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
